--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,11 +6,23 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+.set-position {
+  position: absolute;
+  margin-top: -3.5em;
+  right: 0;
+  margin-right: 1em;
+}
+
 a {
   color: inherit;
   text-decoration: none;
+}
+.buttoncolor{
+  color: white;
 }
 
 * {
   box-sizing: border-box;
 }
+
+
